# DTVM

./: .bazelrc  .clang-tidy  .cmake-format  .gitattributes  .gitignore  .gitmodules  BUILD.bazel1.2.1  CHANGELOG.md  CLA.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  WORKSPACE_no_llvm  commitlint.config.js
.ci/: run_test_suite.sh
.devcontainer/: Dockerfile  devcontainer.json  install_llvm15.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  general-question.md
.github/workflows/: auto-assign.yml  commit-lint.yml  dtvm_dev_docker_release.yml  dtvm_test_x86.yml
docker/: Dockerfile  cargo_config  docker_build_x64.sh  install_llvm15.sh  install_llvm16.sh  install_rust.sh
docs/: API.md  COMMIT_CONVENTION.md  VERSIONING.md  developer-manual.md  start.md  user-guide.md
docs/common/: design_pattern.md  memory_management.md
docs/compiler/: dmir.md  grammar.md  type.md  wasm_dmir.md
example/: .gitignore  fib.wast  trace_fib_interp.sh  trace_fib_multipass.sh  trace_fib_singlepass.sh
example/c_api/: CMakeLists.txt  main.c  t1.wat  t2.wat  t3.wat
example/cpp_sgx/: .gitignore  Makefile  add.wast
example/cpp_sgx/App/: .gitignore  App.cpp
example/cpp_sgx/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
example/cpp_sgx/Include/: user_types.h
rust_crate/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  build_cpp.sh  build_cpp_lib.sh  copy_deps.sh  test.sh  wget-log  wget-log.1
rust_crate/example/: .gitignore  demo_hostapi.wast  fib.wast
rust_crate/rust_example/: .gitignore  Cargo.toml  run.sh
rust_crate/rust_example/src/: main.rs
rust_crate/src/: lib.rs
rust_crate/src/core/: config.rs  extern.rs  host_module.rs  instance.rs  isolation.rs  mod.rs  runtime.rs  types.rs  utils.rs
rust_crate/src/tests/: mod.rs  runtime_test.rs
src/: CMakeLists.txt  zetaengine-c.cpp  zetaengine-c.h  zetaengine.h
src/action/: CMakeLists.txt  bytecode_visitor.h  compiler.cpp  compiler.h  function_loader.cpp  function_loader.h  hook.h  instantiator.cpp  instantiator.h  interpreter.cpp  interpreter.h  loader_common.h  module_loader.cpp  module_loader.h
src/cli/: CMakeLists.txt  dtvm.cpp
src/common/: CMakeLists.txt  arithmetic.def  const_string_pool.cpp  const_string_pool.h  const_strings.def  defines.h  enums.h  errors.cpp  errors.def  errors.h  mem_pool.h  mem_pool_log.def  operators.h  thread_pool.h  traphandler.cpp  traphandler.h  type.h
src/common/libcxx/: cstddef.h  optional.h  string_view.h  type_traits.h  utility.h  variant.h
src/common/wasm_defs/: export.def  import.def  opcode.def  opcode_loadstore.def  sectype.def  valtype.def
src/compiler/: CMakeLists.txt  README.md  compiler.cpp  compiler.h  context.cpp  context.h  ircompiler.cpp
src/compiler/cgir/: cg_basic_block.cpp  cg_basic_block.h  cg_function.cpp  cg_function.h  cg_instruction.cpp  cg_instruction.h  cg_operand.cpp  cg_operand.h  lowering.cpp  lowering.h  mc_lowering.h  value_types.h
src/compiler/common/: common_defs.h  consts.h  llvm_workaround.cpp  llvm_workaround.h
src/compiler/frontend/: lexer.cpp  lexer.h  parser.cpp  parser.h
src/compiler/mir/: basic_block.cpp  basic_block.h  cond_codes.def  constant.h  constants.cpp  constants.h  function.cpp  function.h  instruction.h  instructions.cpp  instructions.h  keywords.def  module.cpp  module.h  opcode.cpp  opcode.h  opcodes.def  pointer.cpp  pointer.h  prim_types.def  type.cpp  type.h  value.h  variable.h
src/entrypoint/: CMakeLists.txt  entrypoint.cpp  entrypoint.h
src/entrypoint/arch/: callNative_aarch64.S  callNative_x86_64.S
src/host/: CMakeLists.txt
src/host/env/: CMakeLists.txt  env.cpp  env.h  libc.inc.cpp  mock_chain.inc.cpp
src/host/spectest/: CMakeLists.txt  spectest.cpp  spectest.h
src/host/wasi/: CMakeLists.txt  wasi.cpp  wasi.h
src/host/wasi/sandboxed-system-primitives/src/: locking.h  numeric_limits.h  posix.c  posix.h  queue.h  random.c  random.h  refcount.h  signals.h  ssp_config.h  str.c  str.h
src/platform/: CMakeLists.txt  map.h  memory.h  platform.h
src/platform/posix/: map.cpp
src/platform/sgx/: zen_sgx.cpp  zen_sgx.h  zen_sgx_dep.h  zen_sgx_file.cpp  zen_sgx_file.h  zen_sgx_map.cpp  zen_sgx_mman.cpp  zen_sgx_mman.h  zen_sgx_string.cpp  zen_sgx_string.h  zen_sgx_thread.h  zen_sgx_time.cpp  zen_sgx_time.h
src/runtime/: CMakeLists.txt  codeholder.cpp  codeholder.h  config.h  destroyer.cpp  destroyer.h  instance.cpp  instance.h  isolation.cpp  isolation.h  memory.cpp  memory.h  module.cpp  module.h  object.h  runtime.cpp  runtime.h  symbol_wrapper.h  vnmi.cpp  vnmi.h  wni.cpp  wni.h
src/singlepass/: CMakeLists.txt  singlepass.cpp  singlepass.h
src/singlepass/a64/: abi.h  assembler.h  codegen.h  codepatch.h  compiler.h  datalayout.h  machine.h  operand.h  operator.h
src/singlepass/a64/asm/: abi.h  assembler.h  datatype.h  register.cpp  register.h
src/singlepass/common/: codegen.h  compiler.h  datalayout.h  definitions.h  valtype.h
src/singlepass/x64/: abi.h  assembler.h  codegen.h  codepatch.h  compiler.h  datalayout.h  machine.h  operand.h  operator.h
src/singlepass/x64/asm/: abi.h  assembler.h  datatype.h  register.cpp  register.h
src/tests/: CMakeLists.txt  RunSpecTests.cmake  c_api_tests.cpp  mempool_tests.cpp  spec_unit_tests.cpp  spectest.cpp  spectest.h  test_utils.cpp  test_utils.h
src/utils/: CMakeLists.txt  backtrace.cpp  backtrace.h  filesystem.h  logging.cpp  logging.h  math.h  others.cpp  others.h  perf.cpp  perf.h  safe_map.cpp  safe_map.h  statistics.cpp  statistics.h  unicode.cpp  unicode.h  virtual_stack.cpp  virtual_stack.h  wasm.cpp  wasm.h
src/wni/: boilerplate.cpp  helper.h  wni.md
tests/mir/: add.ir  and.ir  bit.ir  br.ir  br_if.ir  call-f32.ir  call-f64.ir  call-i32.ir  call-i64.ir  call-regmask.ir  call-void.ir  cmp-f32.ir  cmp-f64.ir  cmp-i32.ir  cmp-i64.ir  constant.ir  eqz.ir  lit.cfg.py  liveout.ir  mul.ir  or.ir  pointer-type.ir  select.ir  sub.ir  switch.ir  test_mir.sh
tests/wast/: spec.patch
tools/: bug_finder.py  collect_cpu_trace.py  format.sh  gdb_trace.py  run-clang-tidy.py
(+144 files in other folders)
