[package]
name = "dtvmcore_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links="zetaengine"
#
[build]
#target="x86_64-unknown-linux-gnu"
#rustc-link-search=["."]
#rustc-link-lib=["zetaengine"]
#root="."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
cty = "0.2.2"
libc = { version = "0.2.121" }
